<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/fundo_cima"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:src="@drawable/fundo_parte_cima"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/seguranca"
        android:layout_width="158dp"
        android:layout_height="27dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:text="@string/seguran_a"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/fundo_cima"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fundo_cima"
        app:layout_constraintVertical_bias="0.513" />

    <Button
        android:id="@+id/button_voltar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/icon_voltar"
        android:fontFamily="@font/archivo_bold"
        android:textColor="@android:color/white"
        android:contentDescription="@string/bot_o_voltar"
        app:layout_constraintBottom_toBottomOf="@+id/fundo_cima"
        app:layout_constraintEnd_toStartOf="@+id/perfil"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fundo_cima"
        tools:ignore="TouchTargetSizeCheck"/>

    <TextView
        android:id="@+id/perfil"
        android:layout_width="158dp"
        android:layout_height="27dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:text="@string/trocar_senha"
        android:textColor="#010715"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fundo_cima" />

    <EditText
        android:id="@+id/senha_atual"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/contorno_edit_text"
        android:fontFamily="@font/poppins_semi_bold"
        android:hint="@string/senha_atual"
        android:inputType="text"
        android:paddingStart="16dp"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perfil" />

    <EditText
        android:id="@+id/nova_senha"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/contorno_edit_text"
        android:fontFamily="@font/poppins_semi_bold"
        android:hint="@string/nova_senha"
        android:inputType="text"
        android:paddingStart="16dp"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senha_atual" />

    <EditText
        android:id="@+id/confirmar_nova_senha"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/contorno_edit_text"
        android:fontFamily="@font/poppins_semi_bold"
        android:hint="@string/confirmar_nova_senha"
        android:inputType="text"
        android:paddingStart="16dp"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nova_senha"
        app:layout_constraintVertical_bias="0.066" />

    <Button
        android:id="@+id/salvar_button"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/fundo_botao_ver"
        android:fontFamily="@font/poppins_extra_bold"
        android:text="@string/salvar"
        android:textColor="#010715"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmar_nova_senha"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>