<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:padding="8dp">

            <Button
                android:id="@+id/button_home"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/icon_home"
                android:contentDescription="@string/bot_o_home"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="8dp">

            <Button
                android:id="@+id/button_upload"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/icon_download"
                android:contentDescription="@string/bot_o_updownload"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="8dp">

            <Button
                android:id="@+id/button_colecao"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/icon_minhacolecao"
                android:contentDescription="@string/bot_o_minha_cole_o"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="8dp">

            <Button
                    android:id="@+id/button_carrinho"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/icon_carrinho"
                    android:contentDescription="@string/bot_o_meu_carrinho"
                    tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="8dp">

            <Button
                android:id="@+id/button_perfil"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/icon_perfil"
                android:contentDescription="@string/bot_o_meu_perfil"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </LinearLayout>
</androidx.appcompat.widget.Toolbar>
