<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    tools:layout_editor_absoluteX="5dp"
    tools:layout_editor_absoluteY="0dp"
    >

    <ImageView
        android:id="@+id/fundo_cima"
        android:layout_width="411dp"
        android:layout_height="64dp"
        android:src="@drawable/fundo_parte_cima"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/perfil"
        android:layout_width="158dp"
        android:layout_height="27dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:text="@string/editar_perfil"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/fundo_cima"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fundo_cima" />

    <Button
        android:id="@+id/button_voltar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/icon_voltar"
        android:fontFamily="@font/archivo_bold"
        android:textColor="@android:color/white"
        android:contentDescription="@string/bot_o_voltar"
        app:layout_constraintBottom_toBottomOf="@+id/fundo_cima"
        app:layout_constraintEnd_toStartOf="@+id/perfil"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fundo_cima"
        tools:ignore="TouchTargetSizeCheck"/>

    <ImageView
        android:id="@+id/foto_perfil"
        android:layout_width="178dp"
        android:layout_height="178dp"
        android:layout_marginTop="51dp"
        android:src="@drawable/foto_perfil_teste"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fundo_cima"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/fundo_botao_editar_foto"
        android:layout_width="138dp"
        android:layout_height="30dp"
        android:layout_marginTop="256dp"
        android:src="@drawable/fundo_premium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fundo_cima" />

    <TextView
        android:id="@+id/nome_usuario"
        android:layout_width="98dp"
        android:layout_height="20dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/editar_foto"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/fundo_botao_editar_foto"
        app:layout_constraintEnd_toEndOf="@+id/fundo_botao_editar_foto"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/fundo_botao_editar_foto"
        app:layout_constraintTop_toTopOf="@+id/fundo_botao_editar_foto" />

    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:hint="@string/nome"
        android:inputType="text"
        android:textSize="14sp"
        android:paddingStart="16dp"
        android:background="@drawable/contorno_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fundo_botao_editar_foto" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:paddingStart="16dp"
        android:background="@drawable/contorno_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nome"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edit_text_telefone"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:hint="@string/telefone"
        android:inputType="phone"
        android:textSize="14sp"
        android:paddingStart="16dp"
        android:background="@drawable/contorno_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

    <EditText
        android:id="@+id/edit_text_senha"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:paddingStart="16dp"
        android:background="@drawable/contorno_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_telefone" />

    <EditText
        android:id="@+id/edit_text_confirme_senha"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:hint="@string/confirme_sua_senha"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:paddingStart="16dp"
        android:background="@drawable/contorno_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_senha" />

    <Button
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/fundo_botao_ver"
        android:fontFamily="@font/poppins_extra_bold"
        android:text="@string/salvar"
        android:textColor="#010715"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_confirme_senha"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>