<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F2F2F2">


    <TextView
        android:id="@+id/termos_condicoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:text="@string/termos_e_condicoes"
        android:textColor="#010715"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_voltar"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/icon_seta_volar_preta"
        android:contentDescription="@string/bot_o_voltar"
        android:fontFamily="@font/archivo_bold"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ScrollView
        android:id="@+id/scrollview_termos"
        android:layout_width="wrap_content"
        android:layout_height="758dp"
        android:layout_marginTop="74dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/texto_termos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:lineSpacingExtra="4dp"
            android:padding="16dp"
            android:text="@string/text_termos_condicoes"
            android:textColor="#010715"
            android:textSize="16sp" />
    </ScrollView>

    <ImageView
        android:id="@+id/fundo_barra_baixo"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:src="@drawable/bara_baixo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Switch
        android:id="@+id/custom_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:checked="true"
        android:minHeight="48dp"
        android:thumb="@drawable/icon_track"
        android:track="@drawable/bg_switch_ativado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fundo_barra_baixo"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/confirma_termos_condicoes"
        android:textColor="#010715"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/custom_switch"
        app:layout_constraintStart_toEndOf="@+id/custom_switch"
        app:layout_constraintTop_toTopOf="@+id/custom_switch"
        app:layout_constraintVertical_bias="0.518" />

</androidx.constraintlayout.widget.ConstraintLayout>
